--- a/Camp.Core/Camp.Core.csproj
+++ b/Camp.Core/Camp.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,11 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Camp.Core\Camp.Core.csproj" />
-    <ProjectReference Include="..\Camp.Entities\Camp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
